--- a/A_Trivia/packages.config
+++ b/A_Trivia/packages.config
@@ -1,5 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BCrypt-Official" version="0.1.109" targetFramework="net461" />
+  <package id="ElasticEmail" version="4.0.22" targetFramework="net461" />
+  <package id="ElasticEmail.WebApiClient" version="1.3.107" targetFramework="net461" />
+  <package id="JsonSubTypes" version="1.9.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
+  <package id="Polly" version="7.2.3" targetFramework="net461" />
+  <package id="RestSharp" version="108.0.2" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net461" />
+  <package id="System.Text.Json" version="5.0.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
